(r3675) Fix a vanilla display glitch: Set the name of crows to "CROW" instead of "CIVILIAN", so the proper name is displayed in the overhead map.
(r3673) Fix vanilla display glitches when drawing the list of names of items on the ground: Properly clamp the list to the view area and prevent incorrect display, when invisible items are present.
(r3668) Fix vanilla displacement of people and item markers in the overhead map for smaller maps (like the rebel basement).
(r3638) Fix a vanilla out of bounds array access.
(r3598) Fix a vanilla memory leak when loading savegames.
(r3592) Fix vanilla bugs (different destinations within one squad, combats with no participants) when right clicking the the name, location or destination columns to abort movement planning mode.
(r3546) Ensure that taking screenshots does not overwrite older screenshots.
(r3529) Fix a bug caused by change of behaviour in r2719, which lead to truncation of the finance records.
(r3489) Fix a vanilla out of bounds access (which is a NULL-pointer access since r2625) when looking at the sector inventory and no merc is on the team.
(r3444, r3445, r3600, r3605) Fix several vanilla graphical deviations when drawing items.
(r3432) Fix a vanilla display bug of the remaining time on Slay's contract.  It was always 2982616d 4h.
(r3400) Fix a vanilla bug, which under rare circumstances caused items to disappear when changing sectors and looking at the sector inventory.
(r3340) Fix a bug, which caused corrupted savegames when saving pseudo objects.  Most common symptom is corrupted savegames after receiving the "donation" from Armand.
(r3325, r3327) Plug vanilla memory leaks which occur during strategic movement planning.
(r3274) Fix a vanilla bug: Only consume one adrenaline booster at a time, even when multiple are selected (only the effects of one are applied).
(r3214) Fix an error in r2460 which caused that only one merc at a time could be put into a vehicle.